<resources>
    <string name="app_name">Kaduna State Government</string>
    <string name="app_says">Kaduna State Government says,</string>
    <string name="invalid_response_error">Got invalid response !!</string>
    <string name="something_went_wrong">Something went wrong !!</string>
    <string name="no_internet_message">Please check your internet connection !!</string>
    <string name="ok">Ok</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="invalid_email">Invalid Email !!</string>
    <string name="forgot_password_text">Please enter your email below and you will get instructions on your email for password recovery.</string>
    <string name="cancel">Cancel</string>
    <string name="case_management">Case Management</string>
    <string name="file_management">File Management</string>
    <string name="events">Events</string>
    <string name="announcements">Announcements</string>
    <string name="chat">Chat</string>
    <string name="press_again_to_exit">Press \"Back\" again to exit !!</string>
    <string name="goup">Group</string>
    <string name="personnal">Personnal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no">No</string>
    <string name="logout_sure_text">Are you sure you want to logout ?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="add_event">Add Event</string>
    <string name="font_calendar">font_calendar.ttf</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="submit">Submit</string>
    <string name="select_users">Select Users</string>
    <string name="file_list">File List</string>
    <string name="permission_error">You need to allow required permission to proceed further !!</string>
    <string name="create_case">Create Case</string>
    <string name="select_file">Select File</string>
    <string name="select_gender">Select Gender</string>
    <string name="add_accused">ADD PLAINTIFFS</string>
    <string name="add_accused1">ADD DEFENDANTS</string>
    <string name="delete_accused_message">Do you really want to delete this accused ?</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="add">Add</string>
    <string name="plaintiffs_name">Plaintiffs Name</string>
    <string name="plaintiffs_age">Plaintiffs Age</string>
    <string name="accused_name">Accused Name</string>
    <string name="accused_age">Accused Age</string>
    <string name="defend_name">Defendants Name</string>
    <string name="defendants_name">Defendants Name</string>
    <string name="defendants_age">Defendants Age</string>
    <string name="fields_cannot_left_blank">Fields cannot be left blank !!</string>
    <string name="Date_Requested_MDA">Select Date Requested by MDA</string>
    <string name="select_offence_date">Select Offence Date</string>
    <string name="select_offence_nature">Select Offence Nature</string>
    <string name="select_offence_location">Select Offence Location</string>
    <string name="select_offence_investigation">Select Investigation Unit</string>
    <string name="select_police_file_received_date">Select Date of Briefing from MDA</string>
    <string name="select_first_arrest_date">Select First Arrest Date</string>
    <string name="failed_to_fetch">Failed to fetch this file !!</string>
    <string name="accept">Accept</string>
    <string name="send">Send</string>
    <string name="invalid_password">Invalid Password !!</string>
    <string name="select_offence_date_first">Please select offence date first !!</string>
    <string name="invalid_offence_date">Invalid Date !! Selected date is before Offence date.</string>
    <string name="police_case_file_ref_num">Police case file reference (e.g: CR/465/789)</string>
    <string name="police_ref_num_pattern">e.g: CR/465/789</string>
    <string name="invalid_file_selected">Please select a valid file first !!</string>
    <string name="no_accused_error">Please add atleast 1 accused !!</string>
    <string name="investigation_select_error">Please select an Investigation Unit !!</string>
    <string name="location_select_error">Please select a location of the offence !!</string>
    <string name="nature_select_error">Please select nature of the offence !!</string>
    <string name="ref_num_error">Please enter valid case file reference number!!</string>
    <string name="offence_date_error">Please select Offence Date !!</string>
    <string name="police_file_date_error">Please select Police File Received Date !!</string>
    <string name="arrest_date_error">Please select Police First Arrest Date !!</string>
    <string name="min_one">Minimum 1</string>
    <string name="file_name">File Name</string>
    <string name="invalid_file_name">Invalid file name !!</string>
    <string name="case_id_pattern">Case ID : %s</string>
    <string name="case_name_pattern">Case Name : %s</string>
    <string name="file_count_pattern">%s Files</string>
    <string name="invalid_intent_data">Received invalid data !!</string>
    <string name="file_downloaded_successfully">File downloaded successfully in "sdCard/Downloads" !!</string>
    <string name="file_downloading">Downloading File</string>
    <string name="no_list_found">No list found !!</string>
    <string name="invalid_data_found">Invalid data found</string>
    <string name="file_download_failed">Failed to download file !!</string>
    <string name="close_case">Close Case</string>
    <string name="case_created">Case Created</string>
    <string name="case_sent_dpp">Case sent to DPP</string>
    <string name="case_accepted_dpp">Case Accepted by DPP</string>
    <string name="case_sent_counsel">Case sent to Counsel</string>
    <string name="case_accepted_counsel">Case accepted by Counsel</string>
    <string name="case_sent_litigation">Case sent to Litigation</string>
    <string name="case_accepted_litigation">Case accepted by Litigation</string>
    <string name="send_dpp">Send To Group Registrar</string>
    <string name="send_counsel">Assign to Counsel</string>
    <string name="send_litigation">Enter Brief</string>
    <string name="case_status_pattern">Case Status : %s</string>
    <string name="case_stage_pattern">Stage No. : %s</string>
    <string name="no_cases_found">No Cases Found !!</string>
    <string name="send_to_counsel">Assign to Counsel</string>
    <string name="date_file_received_from_litigation_pattern">Date file received from Litigation : %s</string>
    <string name="select_counsel">Select Counsel</string>
    <string name="blank" />
    <string name="add_comment">Add Comment</string>
    <string name="select_recommendation">Select Recommendation</string>
    <string name="discharge">Discharge</string>
    <string name="prosecute">Prosecute</string>
    <string name="comment">Comment</string>
    <string name="case_detail">Case Detail</string>
    <string name="litigation">Litigation</string>
    <string name="dpp">DPP</string>
    <string name="counsel">Counsel</string>
    <string name="stage_1">Stage 1</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="view_all_comments">View all comments</string>
    <string name="view_accused_recommendations">View accused recommendations</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="stage_2">Stage 2</string>
    <string name="view_files_uploaded">View files uploaded</string>
    <string name="stage_3">Stage 3</string>
    <string name="add_file">Add File</string>
    <string name="file_type_send">Sent to Police</string>
    <string name="file_type_receive">Received from Police</string>
    <string name="select_file_type">Select File Type</string>
    <string name="phase_1_3">Phase 1/3</string>
    <string name="phase_2_3">Phase 2/3</string>
    <string name="phase_3_3">Phase 3/3</string>
    <string name="select_cpe_sent_for_typing"><![CDATA[Select Date C&PE sent for typing]]></string>
    <string name="select_date_cpe_copies"><![CDATA[Select Date C&PE copies C&PE ready]]></string>
    <string name="select_date_cpe_signed"><![CDATA[Select Date signed C&PE is sent to litigation for dispatch]]></string>
    <string name="select_date_cpe_sent_court"><![CDATA[Select Date C&PE sent to court]]></string>
    <string name="select_name_of_court">Select name of court</string>
    <string name="date_hint">e.g. - 2010/12/30</string>
    <string name="select_date_hearing_notice_received">Select Date Hearing notice is received</string>
    <string name="select_date_first_hearing">Select Date of first hearing</string>
    <string name="select_name_trial_court">Select name of trial court</string>
    <string name="select_name_trial_judge">Select name of trial judge</string>
    <string name="date_prosecution_case_commences">Date prosecution case commences</string>
    <string name="date_prosecution_case_completed">Date prosecution case completed</string>
    <string name="date_defense_case_commenced">Date defense case commenced</string>
    <string name="date_defense_case_completed">Date defense case completed</string>
    <string name="date_address_completed">Date address completed</string>
    <string name="date_of_judgement">Date of Judgement</string>
    <string name="date_of_sentencing">Date of Sentencing</string>
    <string name="date_final_case_report_dpp">Date of final case report to DPP</string>
    <string name="select_judgement_each_accused">Select judgement for each accused</string>
    <string name="date_case_closed">Select Case closed date</string>
    <string name="reason_for_closure">Reason for closure</string>
    <string name="reason">Reason</string>
    <string name="start_event_pattern">START : %s</string>
    <string name="end_event_pattern">END : %s</string>
    <string name="no_data_found">No Data Found !!</string>
    <string name="selected_users_pattern">%s users selected</string>
    <string name="delete_event">Delete Event</string>
    <string name="all_fields_required">All fields required !!</string>
    <string name="no_selected_users_error">There has to be atleast one user selected !!</string>
    <string name="please_select_counsel">Please select a counsel first !!</string>
    <string name="required_field">Required Field !!</string>
    <string name="success">Success !!</string>
    <string name="court_case_file_ref_num">Court case file reference number</string>
    <string name="select_hearing_date">Select Hearing Date</string>
    <string name="reasonable_progress_made">Reasonable Progress made</string>
    <string name="select_adjournment_reason">Select Adjournment Reason</string>
    <string name="select_next_hearing_date">Select Next Hearing Date</string>
    <string name="adjournment_data">Adjournment Data</string>
</resources>