<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/shape_rounded_primary"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="0.50"
            android:background="@drawable/selector_rounded_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="@dimen/_7sdp"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/selector_rounded_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/ok"
            android:padding="@dimen/_7sdp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>