<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kapalert.kadunastategovernment.activities.StageThreeStepTwoActivity"
    tools:showIn="@layout/activity_stage_three_step_two">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date_hearing_notice_received"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/date_hearing_notice_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/shape_rounded_primary"
                android:hint="@string/date_hint"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/select_date_first_hearing"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/date_first_hearing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/shape_rounded_primary"
                android:hint="@string/date_hint"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/select_name_trial_court"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <Spinner
                android:id="@+id/name_trial_court"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/select_name_trial_judge"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <Spinner
                android:id="@+id/name_trial_judge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/court_case_file_ref_num"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/file_ref_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/shape_rounded_primary"
                android:ems="10"
                android:hint="@string/police_ref_num_pattern"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_rect_button"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="@dimen/_7sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />
</LinearLayout>
