<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/head1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_rounded_primary"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shape_rounded_primary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
             />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/remember_me"
            />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/selector_rounded_button"
            android:minHeight="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:minWidth="0dp"
            android:padding="@dimen/_7sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</LinearLayout>